# My_Raytracer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: Camera.hpp  Object.hpp  Ray.hpp  Rect3.hpp  Sphere.hpp  Vec3.hpp
src/: Camera.cpp  Object.cpp  Ray.cpp  Rect3.cpp  Sphere.cpp  Vec3.cpp  main.cpp
